Update base image. Use php 7.2 instead of php 7.0. Fix composer install. Update installed packages. Listen to 8080 instead of 80. Return a 404 instead of 444 by default. Now use two nginx hosts on ports 8080 and 8081. Now use satis 1.0.0 instead of 1.0.0-alpha3

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,7 @@ services:
     volumes:
       - 'satis-web:/home/satis/app/web'
       - '/home/satis/.composer/cache'
-      - '${SATIS_JSON_FILE}:/home/satis/conf/satis.json:ro'
-      - '${ID_RSA_FILE}:/home/satis/.ssh/id_rsa:ro'
-      - '${ID_RSA_PUB_FILE}:/home/satis/.ssh/id_rsa.pub:ro'
+      - '${SATIS_JSON_FILE}:/home/satis/conf/satis.json'
     depends_on:
       - 'gearman'
   nginx:
@@ -19,7 +17,8 @@ services:
     volumes:
       - 'satis-web:/home/satis/app/web'
     ports:
-      - 80:80
+      - ${SATIS_PORT}:8080
+      - ${SATIS_BUILD_PORT}:8081
   gearman:
     image: 'bmichalski/satis-gearman'
 
