--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,13 +1,11 @@
 FROM ubuntu:18.04
 
-RUN \
-  apt-get update -y && \
+RUN apt-get update -y && \
   apt-get dist-upgrade -y
 
-RUN \
-  apt-get install -y \
-    supervisor \
-    iputils-ping \
-    vim \
-    telnet \
-    curl
+RUN apt-get install -y \
+  supervisor \
+  iputils-ping \
+  vim \
+  telnet \
+  curl
